force-app/main/default/objects/redwing__Training_Plan_Feedback__c/redwing__Training_Plan_Feedback__c.object-meta.xml
<CustomObject>
    <label>Learning Plan Feedback</label>
    <nameField>
        <displayFormat>LPF-{0000000}</displayFormat>
        <label>Learning Plan Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Plan Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>