force-app/main/default/objects/redwing__Training_Plan_Feedback__c/fields/redwing__Rating__c.field-meta.xml
<CustomField>
    <fullName>redwing__Rating__c</fullName>
    <label>Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>