force-app/main/default/objects/redwing__Training_Plan_Feedback__c/fields/redwing__Training_Plan__c.field-meta.xml
<CustomField>
    <fullName>redwing__Training_Plan__c</fullName>
    <label>Learning Plan</label>
    <referenceTo>redwing__Training_Plan__c</referenceTo>
    <relationshipLabel>Learning Plan Feedback</relationshipLabel>
    <relationshipName>Training_Plan_Feedbacks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>